placed google fonts in head tag to fix bug with fonts not applying in ghpages, fixed hamburger icon align

--- a/resource/css/styles.css
+++ b/resource/css/styles.css
@@ -9028,8 +9028,7 @@ a.text-dark:hover, a.text-dark:focus {
   }
 }
 /*# sourceMappingURL=bootstrap.css.map */
-@import url("https://fonts.googleapis.com/css?family=Abel|Antic");
-body {
+body, html {
   font-family: 'Abel', sans-serif;
   font-size: 16px;
   padding-top: 103px; }
@@ -9147,7 +9146,8 @@ header .navbar {
           header .navbar .navbar-collapse .nav-item a:after {
             opacity: 0; } }
   header .navbar .navbar-toggler {
-    outline: none; }
+    outline: none;
+    padding: 0; }
   header .navbar .contactButtonSmall {
     margin-right: -62px; }
     @media screen and (max-width: 1600px) {
