--- a/resource/sass/main.sass
+++ b/resource/sass/main.sass
@@ -1,7 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Abel|Antic')
 
 //Layout
-body
+body, html
   font-family: 'Abel', sans-serif
   font-size: 16px
   padding-top: 103px
@@ -104,6 +103,7 @@ header
               opacity: 0
     .navbar-toggler
       outline: none
+      padding: 0
     .contactButtonSmall
       margin-right: -62px
       @media screen and (max-width: 1600px)
